[package]
name = "jsonrpc"
version = "0.11.19"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "try trywen@qq.com"]
license = "CC0-1.0"
homepage = "https://github.com/tryor/rust-jsonrpc/"
repository = "https://github.com/tryor/rust-jsonrpc/"
documentation = "https://www.wpsoftware.net/rustdoc/jsonrpc/"
description = "Rust support for the JSON-RPC 2.0 protocol"
keywords = [ "protocol", "json", "http", "jsonrpc" ]
readme	 = "README.md"

[lib]
name = "jsonrpc"
path = "src/lib.rs"

[dependencies]
futures = "0.1" 
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
hyper = "0.12.13"
tokio = "0.1.11"
lazy_static = "^0.2.8"

